[package]
name = "oqr-bevy-egui" # ToDo
version = "0.1.0"
publish = false
authors = ["chris de jong <platoscave>"]
edition = "2024"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
#members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx/android-game-activity, since those are covered in `mobile`
[dependencies]
# Our stuff
bevy = { version = "0.19", features = [
    "dynamic_linking",
    "bevy_picking",
    "jpeg",
] }
bevy_panorbit_camera = "0.35.0"
bevy_skybox = "0.7.0"
image = { version = "0.25", default-features = false, features = ["png"] }
itertools = "0.15.0"
mesh = "0.5.2"
bevy_asset_loader = { version = "0.27.0" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.150"
procedural_modelling = { version = "0.5.0", features = ["bevy"] }
bevy_procedural_meshes = "0.19.0"
bevy_fontmesh = "0.6.0"
bevy-inspector-egui = "0.37.0"
bevy_egui = "0.41.0"
bevy_common_assets = { version = "0.17.0", features = ["json"] }
bevy_render = "0.19.0"
bevy_asset = "0.19.0"
#bevy = { version = "0.18.0", default-features = false, features = [
#    "default_app",
#    "2d_api",
#    "2d_bevy_render",
#    "3d_api",
#    "3d_bevy_render",
#    "ui_api",
#    "ui_bevy_render",
#    "scene",
#    "picking",
#    "bevy_gilrs",
#    "bevy_winit",
#    "default_font",
#    "multi_threaded",
#    "webgl2",
#    "x11",
#    "wayland",
#    "sysinfo_plugin",
#] }
# Bevy game template
bevy_kira_audio = { version = "0.25", features = ["android_shared_stdcxx"] }
#bevy_asset_loader = { version = "0.25.0" }
rand = { version = "0.9" }
webbrowser = { version = "1", features = ["hardened"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
##image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
#bevy_panorbit_camera = "0.34.0"
#bevy_skybox = "0.7.0"
#serde = { version = "1.0.215", features = ["derive"] }
#serde_json = "1.0.150"
#procedural_modelling = { version = "0.4.2", features = ["bevy"] }
#bevy_procedural_meshes = "0.18.0"
#bevy_fontmesh = "0.3.0"
#bevy-inspector-egui = "0.36.0"
#bevy_egui = "0.39.1"
#bevy_common_assets = { version = "0.16", features = ["json"] }


# Required to make `rand`/`getrandom` work on wasm.
# Backend is selected via `.cargo/config.toml` rustflags for the wasm32-unknown-unknown target.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }


[build-dependencies]
embed-resource = "1"
